use stream